force-app/main/default/objects/SS_SurveySparrow_Runner__c/SS_SurveySparrow_Runner__c.object-meta.xml
<CustomObject>
    <label>SurveySparrow Runner</label>
    <nameField>
        <label>Survey Runner Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SurveySparrow Runners</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>