force-app/main/default/objects/SS_SurveySparrow_Runner__c/fields/SS_Additional_Comments__c.field-meta.xml
<CustomField>
    <fullName>SS_Additional_Comments__c</fullName>
    <label>Additional Comments</label>
    <type>TextArea</type>
</CustomField>