force-app/main/default/objects/SS_SurveySparrow_Runner__c/fields/SS_Description__c.field-meta.xml
<CustomField>
    <fullName>SS_Description__c</fullName>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>