force-app/main/default/objects/SS_SurveySparrow_Runner__c/fields/SS_Lookup_Relationship_Enabled__c.field-meta.xml
<CustomField>
    <fullName>SS_Lookup_Relationship_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lookup Relationship Enabled</label>
    <type>Checkbox</type>
</CustomField>