force-app/main/default/objects/SS_SurveySparrow_Runner__c/fields/SS_Lookup_Relationship_Field__c.field-meta.xml
<CustomField>
    <fullName>SS_Lookup_Relationship_Field__c</fullName>
    <label>Lookup Relationship Field</label>
    <type>TextArea</type>
</CustomField>