force-app/main/default/objects/SS_SurveySparrow_Runner__c/fields/SS_Object_Fields_Name__c.field-meta.xml
<CustomField>
    <fullName>SS_Object_Fields_Name__c</fullName>
    <label>Object Fields Name</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>