force-app/main/default/objects/SS_SurveySparrow_Runner__c/fields/SS_Object_Name__c.field-meta.xml
<CustomField>
    <fullName>SS_Object_Name__c</fullName>
    <label>Object Name</label>
    <type>TextArea</type>
</CustomField>