force-app/main/default/objects/SS_SurveySparrow_Runner__c/fields/SS_Rate_your_latest_interaction__c.field-meta.xml
<CustomField>
    <fullName>SS_Rate_your_latest_interaction__c</fullName>
    <label>Rate your latest interaction</label>
    <type>TextArea</type>
</CustomField>