force-app/main/default/objects/SS_SurveySparrow_Runner__c/fields/SS_Send_Survey_to__c.field-meta.xml
<CustomField>
    <fullName>SS_Send_Survey_to__c</fullName>
    <label>Send Survey to</label>
    <type>TextArea</type>
</CustomField>