force-app/main/default/objects/SS_SurveySparrow_Runner__c/fields/SS_Send_Survey_Via__c.field-meta.xml
<CustomField>
    <fullName>SS_Send_Survey_Via__c</fullName>
    <label>Send Survey Via</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EMAIL</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>