force-app/main/default/objects/SS_SurveySparrow_Runner__c/fields/SS_Survey__c.field-meta.xml
<CustomField>
    <fullName>SS_Survey__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Survey</label>
    <referenceTo>SS_Survey__c</referenceTo>
    <relationshipLabel>SurveySparrow Runners</relationshipLabel>
    <relationshipName>SurveySparrow_Runners</relationshipName>
    <type>Lookup</type>
</CustomField>