force-app/main/default/objects/SS_SurveySparrow_Runner__c/fields/SS_Survey_Share__c.field-meta.xml
<CustomField>
    <fullName>SS_Survey_Share__c</fullName>
    <label>Survey Share</label>
    <type>TextArea</type>
</CustomField>